chore: add @types/node dev dependency
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "rag",
     "context-injection"
   ],
+  "devDependencies": {
+    "@types/node": "^22.19.11"
+  },
   "peerDependencies": {
     "openclaw": ">=2026.1.26"
   },
